--- a/styles/app.scss
+++ b/styles/app.scss
@@ -408,7 +408,7 @@ $transparent-white: rgba(255,255,255, 0.97);
       }
     }
 
-    .singleView {
+    .spotlightView {
       height: 100%;
       width: 100%;
 
