--- a/styles/app.scss
+++ b/styles/app.scss
@@ -495,6 +495,10 @@ $transparent-white: rgba(255,255,255, 0.97);
           height: var(--video-height);
           margin: var(--video-margin);
           width: var(--video-width);
+
+          &.dominantSpeaker {
+            box-shadow: 0 0 5px blue;
+          }
         }
       }
     }
