--- a/styles/app.scss
+++ b/styles/app.scss
@@ -296,13 +296,13 @@ $transparent-white: #fff;
       position: relative;
       transition: 250ms;
 
-      &.active {
-        opacity: 1;
-      }
+      // &.active {
+      //   opacity: 1;
+      // }
 
-      &.inactive {
-        opacity: 0.2;
-      }
+      // &.inactive {
+      //   opacity: 0.2;
+      // }
 
       video {
         height: 100%;
