--- a/styles/app.scss
+++ b/styles/app.scss
@@ -274,6 +274,18 @@ $transparent-white: #fff;
       }
     }
 
+    .quakeView {
+      .gameZone {
+        width: 100%;
+        height: 100%;
+
+        iframe {
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+
     .spotlightView {
       height: 100%;
       width: 100%;
