--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,9 +1,9 @@
-@import 'reset';
-@import 'fonts';
-@import 'mixins';
+@import "reset";
+@import "fonts";
+@import "mixins";
 
-$breakpoint: 'max-width: 960px';
-$aspectBreakpoint: 'max-aspect-ratio: 3/4';
+$breakpoint: "max-width: 960px";
+$aspectBreakpoint: "max-aspect-ratio: 3/4";
 
 $transparent-white: #fff;
 
@@ -37,7 +37,7 @@ $transparent-white: #fff;
 
 .modal {
   align-items: center;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   position: absolute;
@@ -47,7 +47,7 @@ $transparent-white: #fff;
 
   .modalInner {
     background: $transparent-white;
-    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     max-width: 700px;
     padding: 20px;
@@ -67,7 +67,8 @@ $transparent-white: #fff;
 
 .roomPage {
   position: absolute;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   display: grid;
   height: 100%;
   width: 100%;
@@ -78,7 +79,8 @@ $transparent-white: #fff;
   .videoChat {
     position: relative;
 
-    > header, > footer {
+    > header,
+    > footer {
       height: 85px;
       position: absolute;
       transition: 300ms;
@@ -94,7 +96,7 @@ $transparent-white: #fff;
 
       h1 {
         color: #fff;
-        text-shadow: 0 0 5px rgba(0,0,0,0.6);
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
         opacity: 0.9;
       }
     }
@@ -108,7 +110,7 @@ $transparent-white: #fff;
     > footer {
       background-color: $transparent-white;
       bottom: 0;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
   }
 
@@ -126,7 +128,7 @@ $transparent-white: #fff;
     }
 
     > footer {
-      border-top: 1px solid rgba(0,0,0,0.1);
+      border-top: 1px solid rgba(0, 0, 0, 0.1);
     }
   }
 
@@ -188,7 +190,7 @@ $transparent-white: #fff;
   .videos {
     align-items: center;
     background-color: #000;
-    background-image: url('/images/cartographer.png');
+    background-image: url("/images/cartographer.png");
     display: flex;
     justify-content: center;
     padding: 0;
@@ -301,12 +303,12 @@ $transparent-white: #fff;
         top: 0;
         z-index: 10;
 
-        box-shadow: 0 0 10px rgba(0,0,0,0.3);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         border-bottom-left-radius: 10px;
         overflow: hidden;
 
         .video {
-          height: calc(15vw / (16/9));
+          height: calc(15vw / (16 / 9));
           width: 15vw;
         }
 
@@ -337,7 +339,7 @@ $transparent-white: #fff;
         .nonSpeakingParticipants {
           @include responsive($aspectBreakpoint) {
             .video {
-              width: calc(20vh / (16/9)) !important;
+              width: calc(20vh / (16 / 9)) !important;
               height: 20vh !important;
             }
           }
@@ -403,7 +405,7 @@ $transparent-white: #fff;
       justify-content: center;
 
       .button {
-        border: 1px solid rgba(0,0,0, 0.15);
+        border: 1px solid rgba(0, 0, 0, 0.15);
         border-radius: 100%;
         height: 55px;
         width: 55px;
@@ -446,7 +448,7 @@ $transparent-white: #fff;
       user-select: none;
 
       &:hover {
-        background: rgba(0,0,0, 0.03);
+        background: rgba(0, 0, 0, 0.03);
       }
 
       &:active {
@@ -459,7 +461,8 @@ $transparent-white: #fff;
       }
     }
 
-    .left, .right {
+    .left,
+    .right {
       flex-shrink: 0;
 
       .button {
@@ -549,7 +552,8 @@ $transparent-white: #fff;
       margin-bottom: 2px;
     }
 
-    select, input {
+    select,
+    input {
       background: #fff;
       border: 1px solid #bbb;
       border-radius: 5px;
@@ -579,13 +583,12 @@ $transparent-white: #fff;
   @include responsive($breakpoint) {
     flex-direction: column;
 
-    .videoContainer{
+    .videoContainer {
       .video {
         width: 225px;
         height: 400px;
       }
     }
-
 
     .formContainer {
       padding: 20px 0 0 0;
