--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:700&display=swap");
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-h1,h2,h3,h4 {
-  font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Poppins", sans-serif;
   font-weight: 700;
 }
