--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,7 +4,6 @@
 
 $breakpoint: "max-width: 960px";
 $aspectBreakpoint: "max-aspect-ratio: 3/4";
-
 $transparent-white: #fff;
 
 .homePage {
@@ -12,8 +11,8 @@ $transparent-white: #fff;
 
   h1 {
     font-size: 100px;
-    margin-top: 100px;
     letter-spacing: -6px;
+    margin-top: 100px;
   }
 
   h2 {
@@ -39,16 +38,16 @@ $transparent-white: #fff;
   align-items: center;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
+  height: 100%;
   justify-content: center;
   position: absolute;
-  height: 100%;
   width: 100%;
   z-index: 20;
 
   .modalInner {
     background: $transparent-white;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
     max-width: 700px;
     padding: 20px;
     width: 100%;
@@ -66,15 +65,15 @@ $transparent-white: #fff;
 }
 
 .roomPage {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: grid;
-  height: 100%;
-  width: 100%;
   grid-template-columns: auto;
   grid-template-rows: auto;
+  height: 100%;
+  left: 0;
   overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
 
   .videoChat {
     position: relative;
@@ -96,8 +95,8 @@ $transparent-white: #fff;
 
       h1 {
         color: #fff;
-        text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
         opacity: 0.9;
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
       }
     }
 
@@ -154,9 +153,9 @@ $transparent-white: #fff;
   }
 
   button {
-    width: 100px;
     // This shifts the content up
     margin-bottom: 100px;
+    width: 100px;
   }
 }
 
@@ -172,10 +171,10 @@ $transparent-white: #fff;
     display: flex;
 
     h1 {
-      font-size: 26px;
-      flex-grow: 1;
-      margin-left: 15px;
       display: none;
+      flex-grow: 1;
+      font-size: 26px;
+      margin-left: 15px;
     }
 
     .controls {
@@ -211,8 +210,8 @@ $transparent-white: #fff;
 
       video {
         height: 100%;
-        width: 100%;
         object-fit: contain;
+        width: 100%;
       }
 
       &.cameraVideoType {
@@ -240,8 +239,8 @@ $transparent-white: #fff;
         background: #555 !important;
 
         .fa-video-slash {
-          font-size: 36px;
           color: #fff;
+          font-size: 36px;
           left: 50%;
           position: absolute;
           top: 50%;
@@ -255,10 +254,10 @@ $transparent-white: #fff;
 
       &.audioMuted {
         .fa-microphone-slash {
-          color: #fff;
           bottom: 20px;
-          position: absolute;
+          color: #fff;
           left: 20px;
+          position: absolute;
         }
       }
     }
@@ -278,8 +277,8 @@ $transparent-white: #fff;
 
     .quakeView {
       .gameZone {
-        width: 100%;
         height: 100%;
+        width: 100%;
 
         iframe {
           height: 100%;
@@ -294,18 +293,18 @@ $transparent-white: #fff;
 
       .nonSpeakingParticipants {
         background: #000;
+        border-bottom-left-radius: 10px;
+
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         display: flex;
         flex-direction: column;
-        max-width: 100%;
         max-height: 100%;
+        max-width: 100%;
+        overflow: hidden;
         position: absolute;
         right: 0;
         top: 0;
         z-index: 10;
-
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        border-bottom-left-radius: 10px;
-        overflow: hidden;
 
         .video {
           height: calc(15vw / (16 / 9));
@@ -339,8 +338,8 @@ $transparent-white: #fff;
         .nonSpeakingParticipants {
           @include responsive($aspectBreakpoint) {
             .video {
-              width: calc(20vh / (16 / 9)) !important;
               height: 20vh !important;
+              width: calc(20vh / (16 / 9)) !important;
             }
           }
         }
@@ -364,16 +363,17 @@ $transparent-white: #fff;
 
       .row {
         display: flex;
-        justify-content: center;
         flex-grow: 1;
+        justify-content: center;
 
         .video {
-          border-radius: 15px;
           background: #000;
+          border-radius: 15px;
           height: var(--video-height);
           margin: var(--video-margin);
-          width: var(--video-width);
+          // Fixes issue with Safari border radius
           -webkit-transform: translate3d(0, 0, 0);
+          width: var(--video-width);
 
           &.dominantSpeaker {
             box-shadow: 0 0 5px blue;
@@ -423,8 +423,8 @@ $transparent-white: #fff;
         }
 
         &:hover {
-          border-color: red;
           background: red;
+          border-color: red;
 
           svg {
             color: #fff;
@@ -468,8 +468,8 @@ $transparent-white: #fff;
       .button {
         height: 100%;
         padding: 0 20px;
-        width: 130px;
         text-align: center;
+        width: 130px;
 
         .label {
           display: block;
@@ -500,23 +500,24 @@ $transparent-white: #fff;
       border-radius: 10px;
       height: 363px;
       overflow: hidden;
-      width: 645px;
+      // Fixes issue with Safari border radius
       -webkit-transform: translate3d(0, 0, 0);
+      width: 645px;
 
       video {
-        transform: scaleX(-1);
         height: 100%;
-        width: 100%;
         object-fit: contain;
+        transform: scaleX(-1);
+        width: 100%;
       }
     }
   }
 
   .formContainer {
-    width: 350px;
     min-height: 135px; // min height for less jumpiness
     padding-left: 20px;
     text-align: center;
+    width: 350px;
 
     h2 {
       font-size: 24px;
@@ -566,8 +567,8 @@ $transparent-white: #fff;
     .buttonRow {
       button {
         background-color: #eee;
-        border-radius: 25px;
         border: 1px solid #ccc;
+        border-radius: 25px;
         font-size: 16px;
         font-weight: bold;
         padding: 10px 30px;
@@ -585,8 +586,8 @@ $transparent-white: #fff;
 
     .videoContainer {
       .video {
-        width: 225px;
         height: 400px;
+        width: 225px;
       }
     }
 
