--- a/styles/app.scss
+++ b/styles/app.scss
@@ -64,6 +64,29 @@ $transparent-white: #fff;
   }
 }
 
+.modal.share {
+  align-items: flex-end;
+
+  .modalInner {
+    margin-bottom: 175px;
+    max-width: 500px;
+
+    .message {
+      color: #555;
+      margin-bottom: 15px;
+    }
+
+    .url {
+      margin-bottom: 10px;
+
+      svg {
+        color: #aaa;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
 .roomPage {
   display: grid;
   grid-template-columns: auto;
