Only hide toolbar if there are other participants.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -147,7 +147,7 @@ $transparent-white: #fff;
 
   &.hideControls {
     .videoChat {
-      > footer {
+      > footer.hidable {
         bottom: -85px;
       }
     }
