--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,686 +1,251 @@
-@import "reset";
-@import "fonts";
+@import "~antd/dist/antd.css";
+@import "~@fortawesome/fontawesome-svg-core/styles.css";
 @import "mixins";
 
 $breakpoint: "max-width: 960px";
 $aspectBreakpoint: "max-aspect-ratio: 3/4";
 $transparent-white: #fff;
 
-.homePage {
-  text-align: center;
+.video {
+  max-width: 100%;
 
-  h1 {
-    font-size: 100px;
-    letter-spacing: -6px;
-    margin-top: 100px;
-  }
-
-  h2 {
-    font-size: 25px;
-    margin-top: 30px;
-  }
-
-  button {
-    font-size: 40px;
-    font-weight: bold;
-    margin-top: 50px;
-    padding: 20px 40px;
-  }
-
-  .temporary {
-    color: #888;
-    font-size: 14px;
-    margin-top: 50px;
+  video {
+    max-width: 100%;
   }
 }
 
-.modal {
-  align-items: center;
-  background: rgba(0, 0, 0, 0.4);
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  position: absolute;
-  width: 100%;
-  z-index: 20;
-
-  .modalInner {
-    background: $transparent-white;
-    border-radius: 15px;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
-    max-width: 700px;
-    padding: 20px;
-    position: relative;
-    width: 100%;
-
-    .close {
-      color: #888;
-      cursor: pointer;
-      position: absolute;
-      right: 20px;
-      top: 20px;
-    }
-
-    h2 {
-      font-size: 24px;
-      margin-bottom: 15px;
-    }
-
-    h3 {
-      font-size: 20px;
-      margin: 15px 0;
-    }
-  }
-}
-
-.modal.share {
-  align-items: flex-end;
-
-  .modalInner {
-    color: #555;
-    margin-bottom: 150px;
-    max-width: 500px;
-
-    @include responsive($breakpoint) {
-      margin-bottom: 115px;
-    }
-
-    .message {
-      margin-bottom: 15px;
-    }
-
-    .url {
-      font-size: 15px;
-      margin-bottom: 20px;
-    }
-
-    .action {
-      cursor: pointer;
-      margin-bottom: 10px;
-
-      svg {
-        color: #999;
-        margin-right: 5px;
-      }
-    }
-  }
-}
-
-.roomPage {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  height: 100%;
-  left: 0;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  width: 100%;
-
-  .videoChat {
-    position: relative;
-
-    > header,
-    > footer {
-      height: 85px;
-      position: absolute;
-      transition: 300ms;
-      width: 100%;
-      z-index: 10;
-    }
-
-    > header {
-      border: 0;
-      height: 70px;
-      padding-left: 10px;
-      top: 0;
-
-      h1 {
-        color: #fff;
-        opacity: 0.9;
-        text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
-      }
-    }
-
-    > section {
-      height: 100vh;
-      height: calc(var(--mvh, 1vh) * 100);
-      width: 100%;
-    }
-
-    > footer {
-      background-color: $transparent-white;
-      bottom: 0;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
-  }
-
-  &.hideControls {
-    .videoChat {
-      > footer.hidable {
-        bottom: -85px;
-      }
-    }
-  }
-
-  .videoChat {
-    > header {
-      //border-bottom: 1px solid rgba(0,0,0,0.1);
-    }
-
-    > footer {
-      border-top: 1px solid rgba(0, 0, 0, 0.1);
-    }
-  }
-
-  &.roomSetup {
-    .videoChat > section {
-      align-items: center;
-      display: flex;
-      justify-content: center;
-
-      .videoContainer {
-        .video {
-          height: 363px;
-          width: 645px;
-
-          @include responsive($breakpoint) {
-            height: 400px;
-            width: 225px;
-          }
-        }
-      }
-    }
-  }
-}
-
-.leftRoom {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
+.roomSetup {
   height: 100vh;
-  justify-content: center;
-
-  h1 {
-    font-size: 28px;
-    margin-bottom: 20px;
-  }
-
-  button {
-    // This shifts the content up
-    margin-bottom: 100px;
-    width: 100px;
-  }
-}
-
-.roster {
-  display: none;
 }
 
 .videoChat {
-  overflow: hidden;
+  height: 100vh;
+  position: relative;
 
-  header {
-    align-items: center;
+  .videoChatControls {
+    background: #fff;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+  }
+}
+
+.videoChatControls {
+  height: 65px;
+
+  .ant-space {
+    // Defaults to flex-inline
     display: flex;
+  }
 
-    h1 {
-      display: none;
-      flex-grow: 1;
-      font-size: 26px;
-      margin-left: 15px;
+  .left {
+    .ant-space {
+      justify-content: flex-start;
+      padding-left: 10px;
+    }
+  }
+
+  .center {
+    .ant-space {
+      justify-content: center;
+    }
+  }
+
+  .right {
+    .ant-space {
+      justify-content: flex-end;
+      padding-right: 10px;
+    }
+  }
+}
+
+.videos {
+  align-items: center;
+  background-color: #000;
+  background-image: url("/images/cartographer.png");
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  padding: 0;
+  position: relative;
+
+  .video {
+    overflow: hidden;
+    position: relative;
+    transition: 250ms;
+
+    video {
+      height: 100%;
+      object-fit: contain;
+      width: 100%;
     }
 
-    .controls {
-      height: 100%;
+    &.cameraVideoType {
+      &.local video {
+        transform: scaleX(-1);
+      }
 
-      .label {
-        display: none !important;
+      &.wideAspect {
+        background: transparent;
+
+        video {
+          // The container is the matching aspect ratio
+          object-fit: cover;
+        }
+      }
+    }
+
+    &.desktopVideoType {
+      video {
+        object-fit: scale-down !important;
+      }
+    }
+
+    &.videoMuted {
+      background: #555 !important;
+
+      .fa-video-slash {
+        color: #fff;
+        font-size: 36px;
+        left: 50%;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      video {
+        visibility: hidden;
+      }
+    }
+
+    &.audioMuted {
+      .fa-microphone-slash {
+        bottom: 20px;
+        color: #fff;
+        left: 20px;
+        position: absolute;
       }
     }
   }
 
-  .videos {
-    align-items: center;
-    background-color: #000;
-    background-image: url("/images/cartographer.png");
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    position: relative;
-
+  .cropped {
     .video {
-      overflow: hidden;
-      position: relative;
-      transition: 250ms;
-
-      // &.active {
-      //   opacity: 1;
-      // }
-
-      // &.inactive {
-      //   opacity: 0.2;
-      // }
-
-      video {
-        height: 100%;
-        object-fit: contain;
-        width: 100%;
-      }
-
-      &.cameraVideoType {
-        &.local video {
-          transform: scaleX(-1);
-        }
-
-        &.wideAspect {
-          background: transparent;
-
+      // Cover all the things on narrow screens
+      @include responsive($aspectBreakpoint) {
+        &.cameraVideoType {
           video {
-            // The container is the matching aspect ratio
-            object-fit: cover;
-          }
-        }
-      }
-
-      &.desktopVideoType {
-        video {
-          object-fit: scale-down !important;
-        }
-      }
-
-      &.videoMuted {
-        background: #555 !important;
-
-        .fa-video-slash {
-          color: #fff;
-          font-size: 36px;
-          left: 50%;
-          position: absolute;
-          top: 50%;
-          transform: translate(-50%, -50%);
-        }
-
-        video {
-          visibility: hidden;
-        }
-      }
-
-      &.audioMuted {
-        .fa-microphone-slash {
-          bottom: 20px;
-          color: #fff;
-          left: 20px;
-          position: absolute;
-        }
-      }
-    }
-
-    .cropped {
-      .video {
-        // Cover all the things on narrow screens
-        @include responsive($aspectBreakpoint) {
-          &.cameraVideoType {
-            video {
-              object-fit: cover !important;
-            }
+            object-fit: cover !important;
           }
         }
       }
     }
+  }
 
-    .quakeView {
-      .gameZone {
-        height: 100%;
-        width: 100%;
-
-        iframe {
-          height: 100%;
-          width: 100%;
-        }
-      }
-    }
-
-    .spotlightView {
+  .quakeView {
+    .gameZone {
       height: 100%;
       width: 100%;
 
-      .nonSpeakingParticipants {
-        background: #000;
-        border-bottom-left-radius: 10px;
+      iframe {
+        height: 100%;
+        width: 100%;
+      }
+    }
+  }
 
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        display: flex;
-        flex-direction: column;
-        max-height: 100%;
-        max-width: 100%;
-        overflow: hidden;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 10;
+  .spotlightView {
+    height: 100%;
+    width: 100%;
 
-        .video {
-          height: calc(15vw / (16 / 9));
-          width: 15vw;
+    .nonSpeakingParticipants {
+      background: #000;
+      border-bottom-left-radius: 10px;
+
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      display: flex;
+      flex-direction: column;
+      max-height: 100%;
+      max-width: 100%;
+      overflow: hidden;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 10;
+
+      .video {
+        height: calc(15vw / (16 / 9));
+        width: 15vw;
+      }
+
+      @include responsive($aspectBreakpoint) {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 10px;
+        flex-direction: row;
+        left: 0;
+        right: unset;
+      }
+    }
+
+    .speakingParticipant {
+      height: 100%;
+      width: 100%;
+
+      .video {
+        height: 100%;
+        width: 100%;
+
+        video {
+          object-fit: contain;
         }
+      }
+    }
 
+    &.cropped {
+      .nonSpeakingParticipants {
         @include responsive($aspectBreakpoint) {
-          border-bottom-left-radius: 0;
-          border-bottom-right-radius: 10px;
-          flex-direction: row;
-          left: 0;
-          right: unset;
+          .video {
+            height: 20vh !important;
+            width: calc(20vh / (16 / 9)) !important;
+          }
         }
       }
 
       .speakingParticipant {
-        height: 100%;
-        width: 100%;
-
         .video {
-          height: 100%;
-          width: 100%;
-
-          video {
-            object-fit: contain;
-          }
-        }
-      }
-
-      &.cropped {
-        .nonSpeakingParticipants {
-          @include responsive($aspectBreakpoint) {
-            .video {
-              height: 20vh !important;
-              width: calc(20vh / (16 / 9)) !important;
+          &.cameraVideoType.wideAspect {
+            video {
+              object-fit: cover;
             }
-          }
-        }
-
-        .speakingParticipant {
-          .video {
-            &.cameraVideoType.wideAspect {
-              video {
-                object-fit: cover;
-              }
-            }
-          }
-        }
-      }
-    }
-
-    .gridView {
-      display: flex;
-      flex-direction: column;
-      margin: var(--video-margin);
-
-      .row {
-        display: flex;
-        flex-grow: 1;
-        justify-content: center;
-
-        .video {
-          background: #000;
-          border-radius: 15px;
-          height: var(--video-height);
-          margin: var(--video-margin);
-          // Fixes issue with Safari border radius
-          -webkit-transform: translate3d(0, 0, 0);
-          width: var(--video-width);
-
-          &.dominantSpeaker {
-            box-shadow: 0 0 5px blue;
           }
         }
       }
     }
   }
 
-  .controls {
+  .gridView {
     display: flex;
+    flex-direction: column;
+    margin: var(--video-margin);
 
-    svg {
-      pointer-events: none;
-    }
-
-    > * {
+    .row {
       display: flex;
-      width: 33%;
-    }
-
-    .left {
-      justify-content: flex-start;
-    }
-
-    .center {
-      align-items: center;
       flex-grow: 1;
       justify-content: center;
 
-      .button {
-        border: 1px solid rgba(0, 0, 0, 0.15);
-        border-radius: 100%;
-        height: 55px;
-        width: 55px;
-
-        svg {
-          color: #717171;
-        }
-      }
-
-      .leaveButton {
-        margin: 0 8px 0 8px;
-
-        svg {
-          color: red;
-        }
-
-        &:hover {
-          background: red;
-          border-color: red;
-
-          svg {
-            color: #fff;
-          }
-        }
-      }
-    }
-
-    .right {
-      justify-content: flex-end;
-    }
-
-    .button {
-      align-items: center;
-      color: #777;
-      cursor: default;
-      display: flex;
-      flex-direction: column;
-      font-size: 14px;
-      justify-content: center;
-      user-select: none;
-
-      &:hover {
-        background: rgba(0, 0, 0, 0.03);
-      }
-
-      &:active {
-        background: #eee;
-      }
-
-      svg {
-        color: #888;
-        font-size: 20px;
-      }
-    }
-
-    .left,
-    .right {
-      flex-shrink: 0;
-
-      .button {
-        height: 100%;
-        padding: 0 20px;
-        text-align: center;
-        width: 130px;
-
-        .label {
-          display: block;
-          margin-top: 8px;
-        }
-
-        svg {
-          font-size: 18px;
-        }
-      }
-
-      // Hide the left and right toolbars on mobile for now
-      @include responsive($breakpoint) {
-        display: none;
-      }
-    }
-  }
-}
-
-.settings {
-  align-items: center;
-  display: flex;
-  width: 100%;
-
-  .videoContainer {
-    .video {
-      background: #eee;
-      border-radius: 10px;
-      height: 225px;
-      overflow: hidden;
-      // Fixes issue with Safari border radius
-      -webkit-transform: translate3d(0, 0, 0);
-      width: 400px;
-
-      video {
-        height: 100%;
-        object-fit: contain;
-        transform: scaleX(-1);
-        width: 100%;
-      }
-    }
-  }
-
-  .formContainer {
-    min-height: 135px; // min height for less jumpiness
-    padding-left: 20px;
-    text-align: center;
-    width: 350px;
-
-    h2 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-
-    h3 {
-      color: #777;
-      font-size: 14px;
-      line-height: 1.4em;
-      margin-top: 15px;
-    }
-
-    .nameRow {
-      display: none;
-    }
-
-    .showAudioVideoSettings {
-      color: #777;
-      cursor: default;
-      font-size: 14px;
-      margin: 15px 0 20px 0;
-    }
-
-    .audioVideoSettings {
-      text-align: left;
-    }
-
-    label {
-      display: block;
-      font-size: 14px;
-      font-weight: bold;
-      margin-bottom: 2px;
-    }
-
-    select,
-    input {
-      background: #fff;
-      border: 1px solid #bbb;
-      border-radius: 5px;
-      font-size: 14px;
-      margin-bottom: 10px;
-      padding: 5px;
-      width: 100%;
-    }
-
-    .buttonRow {
-      button {
-        background-color: #eee;
-        border: 1px solid #ccc;
-        border-radius: 25px;
-        font-size: 16px;
-        font-weight: bold;
-        padding: 10px 30px;
-        transition: 100ms;
-
-        &:hover {
-          background-color: #ddd;
-        }
-      }
-    }
-  }
-
-  @include responsive($breakpoint) {
-    flex-direction: column;
-
-    .videoContainer {
       .video {
-        height: 400px;
-        width: 225px;
+        background: #000;
+        border-radius: 8px;
+        height: var(--video-height);
+        margin: var(--video-margin);
+        // Fixes issue with Safari border radius
+        -webkit-transform: translate3d(0, 0, 0);
+        width: var(--video-width);
+
+        &.dominantSpeaker {
+          box-shadow: 0 0 5px blue;
+        }
       }
     }
-
-    .formContainer {
-      padding: 20px 0 0 0;
-    }
   }
-}
-
-.statusMessage {
-  h2 {
-    font-size: 24px;
-    margin-bottom: 5px;
-    margin-top: 0;
-  }
-
-  h3 {
-    color: #777;
-    font-size: 14px;
-  }
-}
-
-.Toastify {
-  bottom: 10px;
-  position: absolute;
-  right: 10px;
-  z-index: 100;
-}
-
-.Toastify__toast {
-  background: #121212 !important;
-  border-radius: 10px !important;
-  color: #fff !important;
-
-  .Toastify__toast-body {
-    padding-left: 10px;
-  }
-}
-
-.Toastify__toast-container--bottom-right {
-  bottom: 90px !important;
 }
