New room left UI.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -11,6 +11,13 @@ body {
   width: 100vw;
 }
 
+.roomLeft {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+}
+
 .roomSetup {
   align-items: center;
   display: flex;
