--- a/styles/app.scss
+++ b/styles/app.scss
@@ -301,8 +301,14 @@ body {
         width: var(--video-width);
 
         &.dominantSpeaker {
-          box-shadow: 0 0 5px blue;
+          box-shadow: 0 0 0 4px #1890ff;
         }
+      }
+    }
+
+    &.oneToOne {
+      .dominantSpeaker {
+        box-shadow: none !important;
       }
     }
   }
