--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -137,6 +137,21 @@ body {
       width: 100%;
     }
 
+    .charms {
+      bottom: 6px;
+      left: 8px;
+      position: absolute;
+
+      .anticon {
+        svg {
+          color: #fff;
+          filter: drop-shadow(0 0 1px #000);
+          height: 20px;
+          width: 20px;
+        }
+      }
+    }
+
     &.cameraVideoType {
       &.local video {
         transform: scaleX(-1);
@@ -159,28 +174,24 @@ body {
     }
 
     &.videoMuted {
-      background: #555 !important;
+      background: radial-gradient(#111, #000) !important;
 
-      .fa-video-slash {
-        color: #fff;
-        font-size: 36px;
+      .anticon-user {
         left: 50%;
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%);
+
+        svg {
+          color: #777;
+          filter: drop-shadow(1px 1px 0 rgba(0, 0, 0, 0.5));
+          height: 75px;
+          width: 75px;
+        }
       }
 
       video {
         visibility: hidden;
-      }
-    }
-
-    &.audioMuted {
-      .fa-microphone-slash {
-        bottom: 20px;
-        color: #fff;
-        left: 20px;
-        position: absolute;
       }
     }
   }
@@ -233,6 +244,16 @@ body {
       .video {
         height: calc(15vw / (16 / 9));
         width: 15vw;
+
+        &.videoMuted .anticon-user svg {
+          height: 40px;
+          width: 40px;
+        }
+
+        .charms svg {
+          height: 16px;
+          width: 16px;
+        }
       }
 
       @include responsive($aspectBreakpoint) {
@@ -302,6 +323,12 @@ body {
 
         &.dominantSpeaker {
           box-shadow: 0 0 0 4px #1890ff;
+
+          .anticon-user {
+            svg {
+              color: #1890ff;
+            }
+          }
         }
       }
     }
