--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -1,21 +1,32 @@
-// https://google-webfonts-helper.herokuapp.com/fonts/open-sans?subsets=latin
-/* open-sans-regular - latin */
+// https://google-webfonts-helper.herokuapp.com/fonts/roboto?subsets=latin
+/* roboto-regular - latin */
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: local("Open Sans Regular"), local("OpenSans-Regular"),
-    url("/fonts/open-sans-v17-latin-regular.woff2") format("woff2"),
-    url("/fonts/open-sans-v17-latin-regular.woff") format("woff");
+  src: local("Roboto"), local("Roboto-Regular"),
+    url("/fonts/roboto-v20-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/roboto-v20-latin-regular.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* open-sans-700 - latin */
+/* roboto-italic - latin */
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 400;
+  src: local("Roboto Italic"), local("Roboto-Italic"),
+    url("/fonts/roboto-v20-latin-italic.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/roboto-v20-latin-italic.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* roboto-700 - latin */
+@font-face {
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  src: local("Open Sans Bold"), local("OpenSans-Bold"),
-    url("/fonts/open-sans-v17-latin-700.woff2") format("woff2"),
-    url("/fonts/open-sans-v17-latin-700.woff") format("woff");
+  src: local("Roboto Bold"), local("Roboto-Bold"),
+    url("/fonts/roboto-v20-latin-700.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/roboto-v20-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 // https://google-webfonts-helper.herokuapp.com/fonts/poppins?subsets=latin
@@ -30,13 +41,15 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 h1,
 h2,
 h3,
-h4 {
+h4,
+.ant-modal-title,
+.ant-notification-notice-message {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
 }
